force-app/main/default/objects/LLC_BI__Treasury_Service_Involvement__c/fields/LLC_BI__Authorized_User__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Authorized_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is an optional lookup field to the Authorized User for this Involvement.</description>
    <label>Authorized User</label>
    <referenceTo>LLC_BI__Authorized_User__c</referenceTo>
    <relationshipLabel>Treasury Involvements</relationshipLabel>
    <relationshipName>Treasury_Involvements</relationshipName>
    <type>Lookup</type>
</CustomField>