force-app/main/default/objects/LLC_BI__Treasury_Service_Involvement__c/fields/LLC_BI__Treasury_Service__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Treasury_Service__c</fullName>
    <description>This is a required lookup field to the Treasury Service for this Involvement.</description>
    <label>Treasury Service</label>
    <referenceTo>LLC_BI__Treasury_Service__c</referenceTo>
    <relationshipLabel>Treasury Involvements</relationshipLabel>
    <relationshipName>Treasury_Involvements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>